--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Gilda+Display&display=swap" rel="stylesheet');
 @import "tailwindcss";
 @tailwind base;
 @tailwind components;
@@ -32,7 +33,7 @@ button {
 
 
 .font-gilda {
-  font-family: 'Gilda Display', serif;
+  font-family: 'Comic Neue', cursive;
 } 
 
 .letter-colors {
